use vesamenu by default

--- a/syslinux.cfg
+++ b/syslinux.cfg
@@ -26,8 +26,17 @@ TIMEOUT 50
 
 # Menu Configuration
 # Either menu.c32 or vesamenu32.c32 must be copied to /boot/syslinux
-UI menu.c32
-#UI vesamenu.c32
+#UI menu.c32
+UI vesamenu.c32
+
+MENU WIDTH 78
+MENU MARGIN 4
+MENU ROWS 7
+MENU VSHIFT 10
+MENU TABMSGROW 14
+MENU CMDLINEROW 14
+MENU HELPMSGROW 16
+MENU HELPMSGENDROW 29
 
 # Refer to http://syslinux.zytor.com/wiki/index.php/Doc/menu
 MENU TITLE Obarun
